--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 		<main class="main" id="main">
 			<nav class="nav">
 				<ul>
-					<li><a href="">Home</a></li>
+					<!-- class current付加でアクティブ状態 -->
+					<li><a class="current" href="">Home</a></li>
 					<li><a href="">大会会長挨拶</a></li>
 					<li><a href="">開催概要</a></li>
 					<li><a href="">日程表・プログラム</a></li>
@@ -35,15 +36,64 @@
 					<li><a href="">協賛申込</a></li>
 				</ul>
 			</nav>
+
 			<div class="content">
-				content
+				<div class="main-image">
+					<img src="img/main_bg.png" alt="">
+				</div>
+				<h2 class="info-ttl">新着情報</h2>
 				<div class="information">
-					information
+					<ul>
+						<li>
+							<span class="date">2023.2.23</span>
+							<p>webサイトを公開しました。</p>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</main>
 		<footer id="footer" class="footer">
-			footer
+			<div class="footer-inner">
+				<address>
+					<h3>大会事務局</h3>
+					<p class="address-name">
+						●●●●●●●●●●●●●●●●●
+					</p>
+					<p class="address-info">
+						〒000-0000 ●●●●●●●●●●<br>
+						●●●●●●●●●●●●●●●●●●●●●●<br>
+						TEL: 098-000-0000　FAX: 098-000-0000
+					</p>
+				</address>
+				<address>
+					<h3>運営事務局</h3>
+					<p class="address-name">
+						●●●●●●●●●●●●●●●●●
+					</p>
+					<p class="address-info">
+						〒000-0000 ●●●●●●●●●●<br>
+						●●●●●●●●●●●●●●●●●●●●●●<br>
+						TEL: 098-000-0000　FAX: 098-000-0000
+					</p>
+				</address>
+				<address>
+					<h3>大会参加・宿泊登録に関する問い合わせ先</h3>
+					<p class="address-name">
+						●●●●●●●●●●●●●●●●●
+					</p>
+					<p class="address-info">
+						〒000-0000 ●●●●●●●●●●<br>
+						●●●●●●●●●●●●●●●●●●●●●●<br>
+						TEL: 098-000-0000　FAX: 098-000-0000
+					</p>
+				</address>
+
+
+			</div>
+
+			<div class="copyright">
+				&copy;22kbroken-churauchina
+			</div>
 		</footer>
 	</div>
 
