--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 			<div class="content">
 				<div class="main-image">
-					<img src="img/main_bg.png" alt="">
+					<img src="img/mv.jpg" srcset="img/mv@2x.jpg" alt="第22回九州ブロック介護老人保健施設大会">
 				</div>
 				<h2 class="info-ttl">新着情報</h2>
 				<div class="information">
